# SDK-Sovereign

./: .gitignore  BLOG.md  Dockerfile  LICENSE  README.md  client.py  demo.py  inference.py  models.py  openenv.yaml  prd.md  pyproject.toml
docs/: HF_BLOG.md
frontend/: play.html
notebooks/: 00_all_in_one_pipeline.ipynb  00_hardened_pipeline.ipynb  01_smoke_test.ipynb  01_teacher_distillation.ipynb  02_train_lead.ipynb  03_train_auditor.ipynb  04_eval_and_plots.ipynb
scripts/: _write_fixtures.py  _write_notebooks.py  export_sft_dataset.py  generate_teacher_traces.py  hand_patches.py  make_plots.py  run_random_episodes.py
server/: allowlist.json  app.py  environment.py  llm_agents.py  play_routes.py  policy_runtime.py  prompts.py  repo_analysis.py  rubric.py  rule_agents.py  training_data.py  verifier.py
server/repos/comms_repo/: broken.py  meta.json  tests.json
server/repos/maps_repo/: broken.py  meta.json  tests.json
server/repos/payments_repo/: broken.py  meta.json  tests.json
tests/: test_api_routes.py  test_environment.py  test_models.py  test_play_routes.py  test_policy_runtime.py  test_repo_analysis.py  test_repos.py  test_rubric.py  test_smoke_remote.py  test_training_data.py  test_verifier.py
